fixed overflow and first contact link margin

--- a/src/components/projectContainer/projectContainer.scss
+++ b/src/components/projectContainer/projectContainer.scss
@@ -4,6 +4,7 @@
   display: flex;
   gap: 50px;
   height: 500px;
+  margin-bottom: 50px;
 
   .left {
     margin-top: auto;
@@ -91,7 +92,7 @@
 }
 
 .separator {
-  margin: 50px 0;
+  margin-bottom: 50px;
   height: 10px;
   width: 50%;
   align-self: center;
