--- a/src/components/projectsSection/projectsSection.scss
+++ b/src/components/projectsSection/projectsSection.scss
@@ -2,7 +2,6 @@
 
 .projects-section {
   padding-top: 70px;
-  margin-bottom: 50px;
   overflow-x: hidden;
 
   .projects-heading {
